--- a/main.html
+++ b/main.html
@@ -209,17 +209,26 @@
                         </h1>
                         <h4 class="intro__undertitle">Discover Styles. Earn Crypto.</h4>
                     </div>
+                    <div class="countdown-container">
+                        <p id="countdown-label">IEO starts in</p>
+                        <div class="timer" id="countdown"></div>
+                    </div>        
                     <div class="intro__btn-wrap">
                         <a href="#" class="intro__btn btn">
                             <img src="img/sprites/intermediate-svg/profile.svg" class="btn__icon"  alt="icon sign-up">
                             <span>SIGN IN</span>
                         </a>
                         <a href="#" class="intro__btn btn btn--simple">
-                            <img src="img/sprites/intermediate-svg/writing.svg" class="btn__icon"  alt="icon writing">
+                            <img src="img/sprites/intermediate-svg/writing.svg" class="btn__icon__colored"  alt="icon writing">
                             <span>WHITEPAPER</span>
                         </a>
                     </div>
                 </div>
+            </div>
+
+            <div class="funds-container">
+                <div id="fundsRaised"></div>
+                <span class="funds-goal">of $250,000</span>
             </div>
 
             <a href="#" class="header__arrow-down">
@@ -252,5 +261,12 @@
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/js/swiper.min.js"></script>
 
 <script src="js/main.js"></script>
+
+<script src="/plugins/moment.js/moment.min.js"></script>
+<script src="/plugins/countdown/countdown-timer.min.js"></script>
+<script src="/plugins/goalProgress/goalProgress.min.js"></script>
+
+<link rel="stylesheet" href="plugins/goalProgress/goalProgress.css">
+
 </body>
 </html>
