--- a/index.html
+++ b/index.html
@@ -236,10 +236,13 @@
                             </h1>
                             <h4 class="intro__undertitle">Discover Styles. Earn Crypto.</h4>
                         </div>
-                        <div class="countdown-container">
+                        <div class="countdown-container" id="countdown-container">
                             <p id="countdown-label">IEO starts in</p>
                             <div class="timer" id="countdown"></div>
-                        </div>        
+                        </div>
+                        <div class="funds-container" id="funds-container">
+                            <div id="fundsRaised" class="funds-progress"></div>
+                        </div>
                         <div class="intro__btn-wrap">
                             <a href="#" class="intro__btn btn d-none">
                                 <img src="img/sprites/intermediate-svg/profile.svg" class="btn__icon"
@@ -253,11 +256,6 @@
                             </a>
                         </div>
                     </div>
-                </div>
-
-                <div class="funds-container d-none">
-                    <div id="fundsRaised"></div>
-                    <span class="funds-goal">of $250,000</span>
                 </div>
 
                 <a href="#" class="header__arrow-down">
@@ -499,7 +497,7 @@
                             <ul class="roadmap__list roadmap__list--now">
                                 <li class="roadmap__item">
                                     <img src="img/sprites/intermediate-svg/roadmap-next.svg" alt="roadmap-done">
-                                    <span>1st IEO starts aiming to raise $250,000 USD</span>
+                                    <span>1st IEO starts aiming to raise $750,000 USD</span>
                                 </li>
                                 <li class="roadmap__item">
                                     <img src="img/sprites/intermediate-svg/roadmap-next.svg" alt="roadmap-done">
@@ -1037,7 +1035,7 @@
 
     <script src="/plugins/moment.js/moment.min.js"></script>
     <script src="/plugins/countdown/countdown-timer.min.js"></script>
-    <script src="/plugins/goalProgress/goalProgress.min.js"></script>
+    <script src="/plugins/goalProgress/goalProgress.js"></script>
 
     <link rel="stylesheet" href="plugins/goalProgress/goalProgress.css">
 
