Updated demo video

--- a/index.html
+++ b/index.html
@@ -244,11 +244,12 @@
                             <div id="fundsRaised" class="funds-progress"></div>
                         </div>
                         <div class="intro__btn-wrap">
-                            <a href="#" class="intro__btn btn d-none">
+                            <a href="#" class="intro__btn btn">
                                 <img src="img/sprites/intermediate-svg/profile.svg" class="btn__icon"
                                     alt="icon sign-up">
                                 <span>SIGN IN</span>
                             </a>
+                            <span>coming soon</span>
                             <a target="_blank" href="/whitepaper.pdf" class="intro__btn btn btn--simple">
                                 <img src="img/sprites/intermediate-svg/writing.svg" class="btn__icon__colored"
                                     alt="icon writing">
@@ -411,18 +412,12 @@
             <div class="container">
                 <h2 class="roadmap__title wow fadeInUp">Curate Demo Preview</h2>
                 <div class="roadmap__wrap">
-
-
-
                     <video class="animation wow fadeInUp" preload="auto" autoplay="true" loop="true" muted="muted"
                         playsinline="" disableremoteplayback="">
-                        <source src="desktop.mp4" type="video/mp4">
+                        <source src="demo_part_1.mp4" type="video/mp4">
                         <!-- <source src="movie.ogg" type="video/ogg"> -->
                         Your browser does not support the video tag.
                     </video>
-
-
-
                 </div>
             </div>
             <section class="roadmap" id="roadmap">
