Reverting inadvertent check-in

--- a/index.html
+++ b/index.html
@@ -244,12 +244,11 @@
                             <div id="fundsRaised" class="funds-progress"></div>
                         </div>
                         <div class="intro__btn-wrap">
-                            <a href="#" class="intro__btn btn">
+                            <a href="#" class="intro__btn btn d-none">
                                 <img src="img/sprites/intermediate-svg/profile.svg" class="btn__icon"
                                     alt="icon sign-up">
                                 <span>SIGN IN</span>
                             </a>
-                            <span>coming soon</span>
                             <a target="_blank" href="/whitepaper.pdf" class="intro__btn btn btn--simple">
                                 <img src="img/sprites/intermediate-svg/writing.svg" class="btn__icon__colored"
                                     alt="icon writing">
