Added news/quotes section

--- a/index.html
+++ b/index.html
@@ -813,6 +813,26 @@
                     </div>
                 </div>
             </section>
+            <section class="news" id="news">
+                <div class="container center-text">
+                    <div class="news-wrapper">
+                        <div class="flexan">
+                            <img src="img/sprites/intermediate-svg/main-logo.svg" alt="logo" class="main-logo__img">
+                            <img src="img/main/XCircle.svg" class="x-icon-news">
+                            <img src="img/main/p2pb2b.svg">
+                        </div>
+                        <div class="news-quote">
+                            <p>
+                                <q>"</q>
+                                Curate is now <span class="news-highlight">confirmed to be listed on P2PB2B</span> trading platform.  
+                                P2PB2B is one of the top 20 exchanges in the world with a daily trading volume of <span class="news-highlight">$418 million - a real powerhouse.</span>
+                                <q>"</q>
+                            </p>
+                        </div>
+                        <img src="img/main/FounderImage.svg">
+                    </div>
+                </div>
+            </section>
             <section class="graph" id="graph">
                 <div class="container">
                     <div class="graph__wrap">
