Added news section above pie charts

--- a/index.html
+++ b/index.html
@@ -491,7 +491,7 @@
                             <ul class="roadmap__list roadmap__list--now">
                                 <li class="roadmap__item">
                                     <img src="img/sprites/intermediate-svg/roadmap-next.svg" alt="roadmap-done">
-                                    <span>1st IEO starts aiming to raise $750,000 USD</span>
+                                    <span>1st IEO starts, aiming to raise $2.25M USD</span>
                                 </li>
                                 <li class="roadmap__item">
                                     <img src="img/sprites/intermediate-svg/roadmap-next.svg" alt="roadmap-done">
@@ -512,7 +512,7 @@
                             <ul class="roadmap__list roadmap__list--now">
                                 <li class="roadmap__item">
                                     <img src="img/sprites/intermediate-svg/roadmap-next.svg" alt="roadmap-done">
-                                    <span>2nd IEO starts on 2 top CoinMarketCap approved exchanges</span>
+                                    <span>2nd IEO starts on two top CoinMarketCap approved exchanges</span>
                                 </li>
                                 <li class="roadmap__item">
                                     <img src="img/sprites/intermediate-svg/roadmap-next.svg" alt="roadmap-done">
@@ -520,7 +520,7 @@
                                 </li>
                                 <li class="roadmap__item">
                                     <img src="img/sprites/intermediate-svg/roadmap-next.svg" alt="roadmap-done">
-                                    <span>CUR8 token listed on 2 more top exchanges, volume of trading increase</span>
+                                    <span>CUR8 token listed on two more top exchanges, volume of trading increase</span>
                                 </li>
                             </ul>
                         </div>
@@ -816,7 +816,7 @@
             <section class="news" id="news">
                 <div class="container center-text">
                     <div class="news-wrapper">
-                        <div class="flexan">
+                        <div class="flexan column-wrap">
                             <img src="img/sprites/intermediate-svg/main-logo.svg" alt="logo" class="main-logo__img">
                             <img src="img/main/XCircle.svg" class="x-icon-news">
                             <img src="img/main/p2pb2b.svg">
