Added Pitch Deck menu item

--- a/index.html
+++ b/index.html
@@ -91,6 +91,8 @@
                             </li>
                             <li class="main-nav__item"><a class="main-nav__item-link goTo" href="#our-team">Our team</a>
                             </li>
+                            <li class="main-nav__item"><a class="main-nav__item-link" href="Presentation.pdf" target="_blank">Pitch Deck</a>
+                            </li>
                         </ul>
                     </div>
 
@@ -211,6 +213,7 @@
                             <li class="item"> <a class="link goTo" href="#about">About</a></li>
                             <li class="item"> <a class="link goTo" href="#roadmap">Roadmap</a> </li>
                             <li class="item"> <a class="link goTo" href="#our-team">Our team</a></li>
+                            <li class="item"> <a class="link goTo" href="Presentation.pdf" target="_blank">Pitch Deck</a></li>
                             <!--                        <li class="item item&#45;&#45;btn">-->
                             <!--                            <a href="#" class="header-mobile__btn btn btn&#45;&#45;simple">-->
                             <!--                                <img src="img/sprites/intermediate-svg/profile-yellow.svg" class="btn__icon"  alt="icon sign-up">-->
