--- a/login.html
+++ b/login.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" class="overflow">
+
 <head>
     <meta charset="UTF-8" />
 
@@ -39,7 +40,7 @@
     <link rel="apple-touch-icon" sizes="144x144" href="img/favicons/apple-touch-icon-144x144.png">
     <link rel="apple-touch-icon" sizes="180x180" href="img/favicons/apple-touch-icon-180x180.png">
 
-    <meta name="application-name" content="&nbsp;"/>
+    <meta name="application-name" content="&nbsp;" />
     <meta name="msapplication-TileColor" content="#FFFFFF" />
     <meta name="msapplication-TileImage" content="mstile-144x144.png" />
     <meta name="msapplication-square70x70logo" content="mstile-70x70.png" />
@@ -51,61 +52,74 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
     <!-- Custom styles -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/css/swiper.min.css">
     <link rel="stylesheet" href="styles/main.css">
 
     <!-- Title -->
     <title>CURATE</title>
 
 </head>
+
 <body>
-<!--        <h1>New Page</h1>-->
-<main class="main">
-    <section class="form__section">
-        <div class="container">
-            <div class="form__logo">
-                <img src="img/sprites/intermediate-svg/main-logo.svg" class="btn__icon"  alt="icon sign-up">
-            </div>
-            <div class="form">
-                <div class="form__head">
+    <!--        <h1>New Page</h1>-->
+    <main class="main" id="main">
+        <section class="form__section">
+            <div class="container">
+                <a class="form__logo" href="index.html">
+                    <img src="img/sprites/intermediate-svg/main-logo.svg" class="btn__icon" alt="icon sign-up">
+                </a>
+                <div class="form">
+                    <div class="form__head">
 
-                    <h2 class="form__title">Authorization</h2>
-                    <!--                    <h3 class="form__undertitle">Have questions? Contact us:</h3>-->
-                </div>
-                <div class="form__body">
-                    <form action="#" class="form__main-form">
+                        <h2 class="form__title">Authorization</h2>
+                        <!--                    <h3 class="form__undertitle">Have questions? Contact us:</h3>-->
+                    </div>
+                    <div class="form__body">
+                        <form action="#" class="form__main-form">
 
-                        <label for="form-mail" class="form__input">
-                            <span class="label">E-mail</span>
-                            <input type="email" id="form-mail" placeholder="sample@gmail.com">
-                            <span class="form__input-error">incorrect E-mail</span>
-                        </label>
-
-                        <label for="form-pass" class="form__input">
-                            <span class="label">Password</span>
-                            <input type="password" id="form-pass" placeholder="••••••••" required>
-<!--                            <span class="form__input-error">incorrect password</span>-->
-                        </label>
-
-                        <div class="form__footer">
-                            <label for="form-checkbox" class="form__checkbox">
-                                <input type="checkbox" class="form__checkbox-input" id="form-checkbox" />
-                                <span class="form__checkbox-span">Remember me &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
-                                <span class="form__checkbox-span"><a href="#" class="link"> Forgot password?</a></span>
+                            <label for="form-mail" class="form__input">
+                                <span class="label">E-mail</span>
+                                <input type="email" id="form-mail" placeholder="sample@gmail.com"
+                                    autocomplete="username">
+                                <span class="form__input-error d-none">incorrect E-mail</span>
                             </label>
 
-                            <button type="submit" class="form__button">login</button>
+                            <label for="form-pass" class="form__input">
+                                <span class="label">Password</span>
+                                <input type="password" id="form-pass" placeholder="••••••••" required
+                                    autocomplete="current-password">
+                                <!--                            <span class="form__input-error">incorrect password</span>-->
+                            </label>
 
-                            <a href="#" class="link">Create account</a>
-                        </div>
+                            <div class="form__footer">
+                                <label for="form-checkbox" class="form__checkbox">
+                                    <input type="checkbox" class="form__checkbox-input" id="form-checkbox" />
+                                    <span class="form__checkbox-span">Remember me &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
+                                    <span class="form__checkbox-span"><a href="recovery.html" class="link"> Forgot
+                                            password?</a></span>
+                                </label>
 
-                    </form>
+                                <button type="submit" class="form__button">login</button>
+
+                                <a href="register.html" class="link">Create account</a>
+                            </div>
+
+                        </form>
+                    </div>
+
                 </div>
-
             </div>
-        </div>
-    </section>
-</main>
-<script src="js/main.js"></script>
+        </section>
+    </main>
+
+    <link rel="stylesheet" href="styles/animate.css">
+    <link rel="stylesheet" href="styles/transitions.css">
+
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"
+        integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+
+    <script src="js/login.js"></script>
+    <script src="js/transitions.js"></script>
+
 </body>
+
 </html>
