Added validation to register page

--- a/index.html
+++ b/index.html
@@ -2,6 +2,16 @@
 <html lang="en" class="overflow">
 
 <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-144820552-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-144820552-1');
+    </script>
+
     <meta charset="UTF-8">
 
     <!-- Useful meta tags -->
@@ -399,7 +409,7 @@
                                             <img src="img/sprites/intermediate-svg/fire.svg" alt="fire">
                                         </div>
                                         <div class="how__platform-text">
-                                            Content gains popularity allowing 'discoverer' community to disocver content
+                                            Content gains popularity allowing 'discoverer' community to discover content
                                         </div>
                                     </li>
                                     <li class="how__platform-item wow fadeInUp">
@@ -967,6 +977,12 @@
                         </div>
                     </div>
                 </section>
+                <section class="audit" id="audit">
+                    <div class="container center-text audit-container">
+                        <img class="audit-logo" src="./img/main/lex-futurus-coin.png">
+                        <p>Regulated and secured by international law firm, Legal Lex Futurus Group.</p>
+                    </div>
+                </section>
         </main>
         <!--FOOTER-->
         <footer class="footer" id="footer">
@@ -1084,6 +1100,7 @@
             </svg>
         </div>
     </main>
+
     <!--SCRIPTS-->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"
         integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
