--- a/login.html
+++ b/login.html
@@ -2,6 +2,16 @@
 <html lang="en" class="overflow">
 
 <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-144820552-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-144820552-1');
+    </script>
+
     <meta charset="UTF-8" />
 
     <!-- Useful meta tags -->
