Moved pages to views folder; Created user account page; Fnished prepping all account pages

--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                                 <li class="item"> <a class="link goTo" href="Presentation.pdf" target="_blank">Pitch
                                         Deck</a></li>
                                 <li class="item item--btn">
-                                    <a href="login.html" class="header-mobile__btn btn btn--simple">
+                                    <a href="views/login.html" class="header-mobile__btn btn btn--simple">
                                         <img src="img/sprites/intermediate-svg/profile-yellow.svg" class="btn__icon"
                                             alt="icon sign-up">
                                         <span>SIGN IN</span>
@@ -270,7 +270,7 @@
                         </div>
                     </div>
                     <div class="intro__btn-wrap">
-                        <a href="login.html" class="intro__btn btn">
+                        <a href="views/login.html" class="intro__btn btn">
                             <img src="img/sprites/intermediate-svg/profile.svg" class="btn__icon" alt="icon sign-up">
                             <span>SIGN IN</span>
                         </a>
