Updated legal text

--- a/index.html
+++ b/index.html
@@ -980,7 +980,7 @@
                 <section class="audit" id="audit">
                     <div class="container center-text audit-container">
                         <img class="audit-logo" src="./img/main/lex-futurus-coin.png">
-                        <p>Regulated and secured by international law firm, Legal Lex Futurus Group.</p>
+                        <p>Curate and CUR8 tokens are regulated and secured by international law firm, Lex Futurus Group.</p>
                     </div>
                 </section>
         </main>
