--- a/index.html
+++ b/index.html
@@ -447,7 +447,7 @@
                             <li>
                                 <video class="animation wow fadeInUp" preload="auto" autoplay="true" loop="true"
                                     muted="muted" playsinline="" disableremoteplayback="">
-                                    <source src="demo_part_1.mp4" type="video/mp4">
+                                    <source src="video2.mp4" type="video/mp4">
                                     <!-- <source src="movie.ogg" type="video/ogg"> -->
                                     Your browser does not support the video tag.
                                 </video>
