Added myself to team list

--- a/index.html
+++ b/index.html
@@ -654,6 +654,20 @@
                                     </div>
                                     <div class="our-team__slider-block swiper-slide">
                                         <div class="our-team__slider-avatar">
+                                            <img src="img/main/team-bret.jpg" alt="Team-Avatar"
+                                                class="our-team__avatar-img">
+                                        </div>
+                                        <h5 class="our-team__slider-title">Bret Faller</h5>
+                                        <h6 class="our-team__slider-undertitle">Blockchain Engineer</h6>
+                                        <div class="our-team__slider-social">
+                                            <a href="https://www.linkedin.com/in/bret-faller-b441738/"
+                                                class="our-team__slider-social-link" target="_blank">
+                                                <img src="img/sprites/intermediate-svg/linkedin.svg" alt="">
+                                            </a>
+                                        </div>
+                                    </div>
+                                    <div class="our-team__slider-block swiper-slide">
+                                        <div class="our-team__slider-avatar">
                                             <img src="img/main/team-amrit.png" alt="Team-Avatar"
                                                 class="our-team__avatar-img">
                                         </div>
