Added Feature On section; Added help links to User Account page

--- a/index.html
+++ b/index.html
@@ -280,6 +280,18 @@
                             <span>WHITEPAPER</span>
                         </a>
                     </div>
+                    <div class="as-featured-container">
+                        <div class="as-featured-section">
+                            <p>As featured on</p>
+                            <div>
+                                <img src="img/main/forbes-sm.png" />
+                                <img src="img/main/yahoo-sm.png" />
+                                <img src="img/main/entrepreneur-sm.png" />
+                                <img src="img/main/coincodex-sm.png" />
+                                <img src="img/main/investing-sm.png" />
+                            </div>
+                        </div>
+                    </div>
                     <a href="#" class="header__arrow-down">
                         <img src="img/sprites/intermediate-svg/arrow-header-bottom.svg" alt="icon arrow-down">
                     </a>
@@ -994,7 +1006,8 @@
                 <section class="audit" id="audit">
                     <div class="container center-text audit-container">
                         <img class="audit-logo" src="./img/main/lex-futurus-coin.png">
-                        <p>Curate and CUR8 tokens are regulated and secured by international law firm, Lex Futurus Group.</p>
+                        <p>Curate and CUR8 tokens are regulated and secured by international law firm, Lex Futurus
+                            Group.</p>
                     </div>
                 </section>
         </main>
