--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     <title>CURATE</title>
 
     <!--PRELOADER-->
-    <div class="preloader is-active" id="preloader">
+    <!-- <div class="preloader is-active" id="preloader">
         <div class="preloader__wrap">
             <div class="preloader__logo">
                 <img class="preloader__img preloader__img--first" src="img/main/preloader-cureback.svg"
@@ -103,7 +103,7 @@
             </div>
             <img class="preloader__img preloader__img--third" src="img/main/preloader-curate.svg" alt="icon sign-up">
         </div>
-    </div>
+    </div> -->
 </head>
 
 <body>
