User pages live

--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
                                 <li class="item"> <a class="link goTo" href="#our-team">Our team</a></li>
                                 <li class="item"> <a class="link goTo" href="Presentation.pdf" target="_blank">Pitch
                                         Deck</a></li>
-                                <li class="item item--btn d-none">
+                                <li class="item item--btn">
                                     <a href="views/login.html" class="header-mobile__btn btn btn--simple">
                                         <img src="img/sprites/intermediate-svg/profile-yellow.svg" class="btn__icon"
                                             alt="icon sign-up">
@@ -292,7 +292,7 @@
                         </div>
                     </div>
                     <div class="intro__btn-wrap">
-                        <a href="views/login.html" class="intro__btn btn d-none">
+                        <a href="views/login.html" class="intro__btn btn">
                             <img src="img/sprites/intermediate-svg/profile.svg" class="btn__icon" alt="icon sign-up">
                             <span>SIGN IN</span>
                         </a>
