Fixed home page formatting; No longer squished

--- a/index.html
+++ b/index.html
@@ -83,6 +83,8 @@
     <meta name="theme-color" content="#040306">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
+    <!-- <script src="https://cdn.airswap.io/gallery/airswap-trader.js"></script> -->
+
     <!-- Custom styles -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/css/swiper.min.css">
     <link rel="stylesheet" href="styles/main.css">
@@ -271,6 +273,18 @@
                                 </li>
                             </ul>
                         </nav>
+                    </div>
+
+                    <div class="ieo-link-section d-none">
+                        <p>IEO Available on</p>
+                        <div class="ieo-link-logos">
+                            <a href="https://p2pb2b.io/token-sale/CUR8/1" target="_blank">
+                                <img src="img/main/p2pb2b.svg">
+                            </a>
+                            <a id="airswap">
+                                <img src="img/main/airswap.svg">
+                            </a>
+                        </div>
                     </div>
 
                     <div class="header__intro intro">
