Fixed more position/size issues

--- a/index.html
+++ b/index.html
@@ -275,13 +275,13 @@
                         </nav>
                     </div>
 
-                    <div class="ieo-link-section d-none">
+                    <div class="ieo-link-section">
                         <p>IEO Available on</p>
                         <div class="ieo-link-logos">
                             <a href="https://p2pb2b.io/token-sale/CUR8/1" target="_blank">
                                 <img src="img/main/p2pb2b.svg">
                             </a>
-                            <a id="airswap">
+                            <a id="airswap" class="d-none">
                                 <img src="img/main/airswap.svg">
                             </a>
                         </div>
