--- a/index.html
+++ b/index.html
@@ -256,13 +256,13 @@
                                 <li class="item"> <a class="link goTo" href="#our-team">Our team</a></li>
                                 <li class="item"> <a class="link goTo" href="Presentation.pdf" target="_blank">Pitch
                                         Deck</a></li>
-                                <li class="item item--btn">
+                          <!--       <li class="item item--btn">
                                     <a href="views/login.html" class="header-mobile__btn btn btn--simple">
                                         <img src="img/sprites/intermediate-svg/profile-yellow.svg" class="btn__icon"
                                             alt="icon sign-up">
                                         <span>SIGN IN</span>
                                     </a>
-                                </li>
+                                </li> -->
                                 <li class="item item--btn">
                                     <a target="_blank" href="/whitepaper.pdf"
                                         class="header-mobile__btn btn-s btn--simple">
@@ -306,10 +306,10 @@
                         </div>
                     </div>
                     <div class="intro__btn-wrap">
-                        <a href="views/login.html" class="intro__btn btn">
+                        <!-- <a href="views/login.html" class="intro__btn btn">
                             <img src="img/sprites/intermediate-svg/profile.svg" class="btn__icon" alt="icon sign-up">
                             <span>SIGN IN</span>
-                        </a>
+                        </a> -->
                         <a target="_blank" href="/whitepaper.pdf" class="intro__btn btn btn--simple">
                             <img src="img/sprites/intermediate-svg/writing.svg" class="btn__icon__colored"
                                 alt="icon writing">
