--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     <meta name="theme-color" content="#040306">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
-    <!-- <script src="https://cdn.airswap.io/gallery/airswap-trader.js"></script> -->
+    <script src="https://cdn.airswap.io/gallery/airswap-trader.js"></script>
 
     <!-- Custom styles -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/css/swiper.min.css">
@@ -281,7 +281,7 @@
                             <a href="https://p2pb2b.io/token-sale/CUR8/1" target="_blank">
                                 <img src="img/main/p2pb2b.svg">
                             </a>
-                            <a id="airswap" class="d-none">
+                            <a id="airswap">
                                 <img src="img/main/airswap.svg">
                             </a>
                         </div>
